--- a/python_backend/Flask/config.json
+++ b/python_backend/Flask/config.json
@@ -1,6 +1,7 @@
 {
-    "DB_USER": "",
-    "DB_PASSWORD": "",
-    "DB_HOST": "",
-    "DB_NAME": ""
+    "DB_USER": "root",
+    "DB_PASSWORD": "a2617512",
+    "DB_HOST": "localhost",
+    "DB_NAME": "park_now"
 }
+
