--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   jwt_decode: ^0.3.1
   flutter_rating_bar: ^4.0.1
   geolocator: ^7.6.2 
+  camera: ^0.10.5+8
+  google_mlkit_text_recognition: ^0.11.0
 
 dev_dependencies:
   flutter_test:
