--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   geolocator: ^7.6.2 
   camera: ^0.10.5+8
   google_mlkit_text_recognition: ^0.11.0
+  google_maps_flutter: 2.5.0
+  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_test:
