added notifications dependencies

--- a/android/app/src/profile/AndroidManifest.xml
+++ b/android/app/src/profile/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.test">
     
     <application
-        android:label="test"
+        android:label="ParkNow"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
