--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   google_mlkit_text_recognition: ^0.11.0
   google_maps_flutter: 2.5.0
   carousel_slider: ^4.0.0
+  flutter_local_notifications: ^16.3.0
 
 dev_dependencies:
   flutter_test:
