--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_local_notifications: ^16.3.0
   timezone: ^0.9.2
   flutter_timezone: ^1.0.8
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
